# modrn-mind-knowledge-base

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  index.md  log.md  pyproject.toml
_guide/: contributing.md
_workflows/: verifier.md
concepts/: accountability.md  affective-trust-deficit.md  agency.md  ai-loneliness-effect.md  ai-moralization.md  ai-oscillation-trap.md  ai-self-efficacy-erosion.md  amathia-drift.md  analogical-reasoning.md  anchoring-bias.md  anthropomorphism-of-technology.md  anti-intelligence.md  artificial-certainty.md  artificial-confidence.md  authenticity.md  authorship-levels.md  automation-bias.md  belief-offloading.md  borrowed-certainty.md  capacity-erosion.md  cognitive-debt.md  cognitive-friction.md  cognitive-grit.md  cognitive-offloading.md  cognitive-surrender.md  coherence-trap.md  confidence-competence-gap.md  creativity-diversity-paradox.md  delusional-spiraling.md  desirable-difficulty.md  disclosure-penalty.md  dual-development-paths.md  effort-heuristic.md  embodied-cognition.md  execution-commoditization.md  fluency-bias.md  human-ai-complementarity.md  illusion-of-explanatory-depth.md  illusion-of-exploratory-breadth.md  illusion-of-objectivity.md  (+26 more)
frameworks/: complementarity-framework.md  tri-system-theory.md
methods/: ai-vision-taxonomy.md  calibration.md  complementarity-framework.md  continuous-improvement-loop.md  emergency-protocol.md  five-stage-workflow.md  green-yellow-red-monitoring.md  identity-threat-coping.md  mira-model.md  modern-mind.md  modulation-practice.md  scan.md  six-pattern-diagnostic.md  (+6 more)
(+669 files in other folders)
