[project]
name = "modern-mind-kb-agents"
version = "0.1.0"
description = "Automated agent pipeline for Modern Mind Knowledge Base updates"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pygithub>=2.5.0",
]

[project.scripts]
kb-update = "scripts.agents.run_weekly:main"
